# computational_physics

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh
ising/: CMakeLists.txt  Doxyfile  Makefile
ising/include/: lattice.hpp  lattice_mc.hpp  spin_system.hpp  spin_system_selflabeling.hpp  swendsen_wang.hpp  swendsen_wang_selflabeling.hpp  swendsen_wang_selflabeling_simd_intrinsics.hpp
ising/output/: amd_ryzen7_pro4750u.txt  intel_haswell.txt
ising/src/: CMakeLists.txt  ising_2d.cpp  lattice.cpp  spin_system_2d.cpp  swendsen_wang.cpp  swendsen_wang_amd_gpu.cpp  swendsen_wang_cpu.cpp
ising/verification/: CMakeLists.txt  FF_internalEnergy_specificHeat.c  FF_internalEnergy_specificHeat_mpfr.c
random/: CMakeLists.txt  Makefile
random/include/random/: Doxyfile  lcg32.hpp  lcg32_amd_gpu.hpp  random.hpp
random/output/: intel_haswell.txt
random/src/: lcg32.cpp  lcg32_simd_intrinsics.cpp  test.cpp  test_rng.cpp  test_rng_amd_gpu.cpp  test_rng_cpu.cpp
utility/: CMakeLists.txt
utility/array/: accessor.hpp  multi_dimensional_array.hpp
utility/atomic/: atomic.hpp
utility/device/: device.hpp  device_amd_gpu.hpp  device_cpu.hpp  helper.cpp  helper.hpp
utility/environment/: environment.hpp
utility/execution/: CMakeLists.txt  context.hpp  hip_context.hpp  test_thread_group.cpp  thread_context.hpp  thread_group.cpp  thread_group.hpp
utility/future/: future.hpp
utility/hip/: hip.cpp  hip.hpp
utility/memory/: managed_memory.hpp  memory.hpp
utility/misc/: accumulate.hpp  iota.hpp  processor.cpp  processor.hpp  set_operations.hpp
utility/simd/: simd.hpp
utility/simd/arithmetic/: add.hpp  arithmetic.hpp  min.hpp  mul.hpp
utility/simd/bits/: and.hpp  bits.hpp  or.hpp  shift_right.hpp  xor.hpp
utility/simd/compare/: compare.hpp  compare_eq.hpp  compare_lt.hpp  compare_ne.hpp  test.hpp
utility/simd/convert/: convert.hpp
utility/simd/load_store/: load.hpp  load_store.hpp  mov.hpp  store.hpp
utility/simd/logical/: and.hpp  logical.hpp
utility/simd/mask/: mask.hpp  mask_and.hpp  mask_convert.hpp
utility/simd/permute/: permute.hpp  permute_idx.hpp  rotate_right.hpp
utility/simd/rotate/: rotate.hpp  rotate_right.hpp
utility/simd/set/: set.hpp  set_1.hpp
utility/synchronization/: CMakeLists.txt  barrier.hpp  test_barrier.cpp
utility/thread_group/: context.hpp  thread_group.hpp
